kustomization/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-raj
  labels:
    app: portfolio-raj
  namespace: rajsinghtech
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-raj
  template:
    metadata:
      labels:
        app: portfolio-raj
    spec:
      volumes:
      - name: src-volume
        emptyDir: {}
      containers:
      - name: server
        image: hugomods/hugo:exts-non-root
        command: ["server", "-t", "terminal"]
        ports:
        - containerPort: 1313
        volumeMounts:
        - name: src-volume
          mountPath: /src
        # - name: hugo-cache
        #   mountPath: /tmp/hugo_cache
