kustomization/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-raj
spec:
  selector:
    app: portfolio-raj
  ports:
  - name: http
    port: 1313
    protocol: TCP
    targetPort: 1313
  type: ClusterIP
